--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             src="images/person_24dp_FILL0_wght400_GRAD0_opsz24.svg"
                             width="80" height="80">
                     </div>
-                    <h2>Teju</h2>
+                    <h2>Rahul</h2>
                     <form id="detailsForm1">
                         <button type="submit">Details</button>
                     </form>
