--- a/index.html
+++ b/index.html
@@ -28,8 +28,23 @@
                     <p id="error-message"></p>
                 </div>
             </div>
+             <div class="row">
+                <!-- 2 Tab  -->
+                <div class="login-container">
+                    <div class="image">
+                        <img
+                            src="images/person_24dp_FILL0_wght400_GRAD0_opsz24.svg"
+                            width="80" height="80">
+                    </div>
+                    <h2>Rahul</h2>
+                    <form id="detailsForm2">
+                        <button type="submit">Details</button>
+                    </form>
+                    <p id="error-message"></p>
+                </div>
+            </div>
             <div class="row">
-                <!-- 1 Tab  -->
+                <!-- Paytm Tab  -->
                 <div class="login-container">
                     <div class="image">
                         <img
