--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 <!--
             <div class="row">
-                <!-- Paytm Tab  -->
+                <!-- Paytm Tab 
                 <div class="login-container">
                     <div class="image">
                         <img
